# WANDbl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  purge.sh
include/: block_postings_list.hpp  bm25.hpp  invidx.hpp  query.hpp  util.hpp
ir-repo/: cw09-2009.qry  cw09-2010.qry  cw09-2011.qry  cw09-2012.qry  cw09-all.qry  gov2-2004.qry  gov2-2005.qry  gov2-2006.qry  index-CW09B_NOSTOP.param  index-CW09B_STOP.param  index-GOV2_NOSTOP.param  index-GOV2_STOP.param
src/: Makefile  kstem_query.cpp  mk_wand_idx.cpp  wand_search.cpp
